Week-9 Capstone Project/tiffin-pristine/k8s/overlays/prod/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiffin
spec:
  template:
    spec:
      containers:
        - name: tiffin
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              memory: 512Mi
