Week-9 Capstone Project/tiffin-pristine/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiffin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/limit-rps: '50'
spec:
  ingressClassName: nginx
  tls:
    - hosts: [tiffin.example.np]
      secretName: tiffin-tls
  rules:
    - host: tiffin.example.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tiffin
                port: { name: http }
